# Scalarun

./: README.md  SPECS  wxwidgets.cpp
firmware/: Makefile  TODO  main.c
software/: Amplitudeframe.cpp  CMakeLists.txt  Makefile  Settingframe.cpp  global_constants.h  interface.hpp  math.cpp  math.hpp  rtl-sdr_interface.cpp  rtl-sdr_interface.hpp  wxwidgets.cpp
